fix(header): set z-index for fixed .header-body

--- a/src/components/header/header.less
+++ b/src/components/header/header.less
@@ -9,6 +9,7 @@
 		position: fixed;
 		top: 0;
 		left: 0;
+		z-index: 100;
 
 		padding: 35px 30px;
 		border-radius: 0 0 @border-radius @border-radius;
